--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -3,12 +3,27 @@ No = Não.
 NoneOfTheAbove = Nenhuma das anteriores.
 AllOfTheAbove = Todas as anteriores.
 
-HowManyParameters = Quantos parâmetros tem o método %s?
-IsRecursive = O método %s é recursivo?
-HowManyVariables = Quantas variáveis (excluindo os parâmetros) tem o método %s?
-HowManyLoops = Quantos ciclos tem o método %s?
+# JASK Static Question Types
 CallsOtherFunctions = O método %s depende de outros métodos?
-CanCallAMethodWithGivenArguments = O método %s pode ser chamado com os argumentos (%s)?
-WhatIsTheReturnType = Qual o tipo de retorno do método %s?
+HowManyFunctions = De quantos métodos depende o método %s?
+WhichFunctions = Quais são os métodos (além de si próprio) de que depende o método %s?
+IsRecursive = O método %s é recursivo?
+HowManyParams = Quantos parâmetros tem o método %s?
+WhichParameters = Quais são os nomes dos parâmetros do método %s?
+HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem o método %s?
+WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) do método %s?
+WhichVariableHoldsReturn = Que variável vai armazenar o valor de retorno da função %s?
+WhichFixedVariables = Quais são as variáveis de valor fixo do método %s?
+WhichVariableRole = Qual o papel da variável %s no método %s?
+HowManyLoops = Quantos ciclos tem o método %s?
 
-WhatIsTheCallResult = Qual o resultado de executar a chamada %s?
+# JASK Dynamic Question Types
+HowDeepCallStack = Qual a profundidade máxima do "call stack" na invocação %s?
+HowManyFunctionCalls = Quantas invocações de funções são executadas na invocação %s?
+HowManyVariableAssignments = Quantas vezes é a variável %s atribuída na invocação %s?
+WhichVariableValues = Qual a sequência de valores tomadas pela variável %s na invocação %s?
+WhatIsResult = Qual o valor devolvido pela invocação da função %s?
+
+# Custom Static Question Types
+CanCallAMethodWithGivenArguments = O método %s pode ser chamado com os argumentos (%s)?
+WhichReturnType = Qual o tipo de retorno do método %s?
