--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -4,29 +4,29 @@ NoneOfTheAbove = None of the above.
 AllOfTheAbove = All of the above.
 
 # JASK Static Question Types
-CallsOtherFunctions = Does the method %s depend on other methods?
-HowManyFunctions = How many methods does the method %s depend on?
-WhichFunctions = Which other methods does method %s depend on?
-IsRecursive = Is the method %s recursive?
-HowManyParams = How many parameters does the %s method take?
-WhichParameters = Which are the parameter names of the method %s?
-HowManyVariables = How many variables (not including parameters) does the method %s have?
-WhatVariables = Which are the variable names (not including parameters) of the method %s?
-WhichVariableHoldsReturn = Which variable will hold the return value of the function %s?
-WhichFixedVariables = Which are the fixed value variables of method %s?
-WhichVariableRole = What is the role of the variable %s in the method %s?
-HowManyLoops = How many loops does method %s have?
+CallsOtherFunctions = Does the method [%s] depend on other methods?
+HowManyFunctions = How many methods does the method [%s] depend on?
+WhichFunctions = Which other methods does method [%s] depend on?
+IsRecursive = Is the method [%s] recursive?
+HowManyParams = How many parameters does the [%s] method take?
+WhichParameters = Which are the parameter names of the method [%s]?
+HowManyVariables = How many variables (not including parameters) does the method [%s] have?
+WhatVariables = Which are the variable names (not including parameters) of the method [%s]?
+WhichVariableHoldsReturn = Which variable will hold the return value of the function [%s]?
+WhichFixedVariables = Which are the fixed value variables of method [%s]?
+WhichVariableRole = What is the role of the variable [%s] in the method [%s]?
+HowManyLoops = How many loops does method [%s] have?
 
 # JASK Dynamic Question Types
-HowDeepCallStack = What is the maximum call stack depth when calling %s?
-HowManyFunctionCalls = How many function calls are executed when calling %s?
-HowManyVariableAssignments = How many times is the variable %s assigned when calling %s?
-WhichVariableValues = Which is the sequence of values taken by the variable %s when calling %s?
-WhatIsResult = What is the value returned by the function call %s?
+HowDeepCallStack = What is the maximum call stack depth when calling [%s]?
+HowManyFunctionCalls = How many function calls are executed when calling [%s]?
+HowManyVariableAssignments = How many times is the variable [%s] assigned when calling [%s]?
+WhichVariableValues = Which is the sequence of values taken by the variable [%s] when calling [%s]?
+WhatIsResult = What is the value returned by the function call [%s]?
 
 # Custom Static Question Types
-CanCallAMethodWithGivenArguments = Can the method %s be called with the arguments (%s)?
-WhichReturnType = What is the return type of the method %s?
+CanCallAMethodWithGivenArguments = Can the method [%s] be called with the arguments ([%s])?
+WhichReturnType = What is the return type of the method [%s]?
 
 # Custom Dynamic Question Types
 # TODO
