--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -30,3 +30,6 @@ WhichReturnType = What is the return type of the method [%s]?
 
 # Custom Dynamic Question Types
 # TODO
+
+HowManyArrayReads = How many array position reads are performed when calling [%s]?
+
