--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -27,3 +27,5 @@ WhatIsResult = Qual o valor devolvido pela invocação da função [%s]?
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = O método [%s] pode ser chamado com os argumentos ([%s])?
 WhichReturnType = Qual o tipo de retorno do método [%s]?
+
+HowManyArrayReads = Quantas posições de vetor são lidas ao invocar [%s]?
