Implemented JASK question types
- Tried cleaning code (meh)
- Removed unit tests for now, too much change needed, redo better later

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -1,3 +1,4 @@
+# Defaults
 Yes = Yes.
 No = No.
 NoneOfTheAbove = None of the above.
@@ -29,7 +30,6 @@ CanCallAMethodWithGivenArguments = Can the method [%s] be called with the argume
 WhichReturnType = What is the return type of the method [%s]?
 
 # Custom Dynamic Question Types
-# TODO
-
 HowManyArrayReads = How many array position reads are performed when calling [%s]?
+HowManyArrayWrites = How many array position writes are performed when calling [%s]?
 
