--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -1,3 +1,4 @@
+# Defaults
 Yes = Sim.
 No = Não.
 NoneOfTheAbove = Nenhuma das anteriores.
@@ -28,4 +29,6 @@ WhatIsResult = Qual o valor devolvido pela invocação da função [%s]?
 CanCallAMethodWithGivenArguments = O método [%s] pode ser chamado com os argumentos ([%s])?
 WhichReturnType = Qual o tipo de retorno do método [%s]?
 
+# Custom Dynamic Question Types
 HowManyArrayReads = Quantas posições de vetor são lidas ao invocar [%s]?
+HowManyArrayWrites = Quantas posições de vetor são escritas ao invocar [%s]?
