Fixes to some dynamic questions + translate var roles

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -4,6 +4,14 @@ No = No.
 NoneOfTheAbove = None of the above.
 AllOfTheAbove = All of the above.
 
+# Variable Roles
+FixedValue = Fixed Value
+Gatherer = Gatherer
+ArrayIndexIterator = Array Index Iterator
+Stepper = Stepper
+MostWantedHolder = Most-Wanted Holder
+OneWayFlag = One-Way Flag
+
 # JASK Static Question Types
 CallsOtherFunctions = Does the method [%s] depend on other methods?
 HowManyFunctions = How many methods does the method [%s] depend on?
