--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -4,6 +4,14 @@ No = Não.
 NoneOfTheAbove = Nenhuma das anteriores.
 AllOfTheAbove = Todas as anteriores.
 
+# Variable Roles
+FixedValue = Constante
+Gatherer = Acumuladora
+ArrayIndexIterator = Iteradora
+Stepper = Iteradora
+MostWantedHolder = Guardadora
+OneWayFlag = Sinalizadora
+
 # JASK Static Question Types
 CallsOtherFunctions = O método [%s] depende de outros métodos?
 HowManyFunctions = De quantos métodos depende o método [%s]?
@@ -19,7 +27,7 @@ WhichVariableRole = Qual o papel da variável [%s] no método [%s]?
 HowManyLoops = Quantos ciclos tem o método [%s]?
 
 # JASK Dynamic Question Types
-HowDeepCallStack = Qual a profundidade máxima do "call stack" na invocação [%s]?
+HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação [%s]?
 HowManyFunctionCalls = Quantas invocações de funções são executadas na invocação [%s]?
 HowManyVariableAssignments = Quantas vezes é a variável [%s] atribuída na invocação [%s]?
 WhichVariableValues = Qual a sequência de valores tomadas pela variável [%s] na invocação [%s]?
