--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -13,18 +13,18 @@ MostWantedHolder = Most-Wanted Holder
 OneWayFlag = One-Way Flag
 
 # JASK Static Question Types
-CallsOtherFunctions = Does the method [%s] depend on other methods?
-HowManyFunctions = How many methods does the method [%s] depend on?
-WhichFunctions = Which other methods does method [%s] depend on?
-IsRecursive = Is the method [%s] recursive?
-HowManyParams = How many parameters does the [%s] method take?
-WhichParameters = Which are the parameter names of the method [%s]?
-HowManyVariables = How many variables (not including parameters) does the method [%s] have?
-WhatVariables = Which are the variable names (not including parameters) of the method [%s]?
+CallsOtherFunctions = Does the function [%s] depend on other functions?
+HowManyFunctions = How many functions does the function [%s] depend on?
+WhichFunctions = Which other functions does function [%s] depend on?
+IsRecursive = Is the function [%s] recursive?
+HowManyParams = How many parameters does the [%s] function take?
+WhichParameters = Which are the parameter names of the function [%s]?
+HowManyVariables = How many variables (not including parameters) does the function [%s] have?
+WhatVariables = Which are the variable names (not including parameters) of the function [%s]?
 WhichVariableHoldsReturn = Which variable will hold the return value of the function [%s]?
-WhichFixedVariables = Which are the fixed value variables of method [%s]?
-WhichVariableRole = What is the role of the variable [%s] in the method [%s]?
-HowManyLoops = How many loops does method [%s] have?
+WhichFixedVariables = Which are the fixed value variables of function [%s]?
+WhichVariableRole = What is the role of the variable [%s] in the function [%s]?
+HowManyLoops = How many loops does function [%s] have?
 
 # JASK Dynamic Question Types
 HowDeepCallStack = What is the maximum call stack depth when calling [%s]?
@@ -34,8 +34,8 @@ WhichVariableValues = Which is the sequence of values taken by the variable [%s]
 WhatIsResult = What is the value returned by the function call [%s]?
 
 # Custom Static Question Types
-CanCallAMethodWithGivenArguments = Can the method [%s] be called with the arguments ([%s])?
-WhichReturnType = What is the return type of the method [%s]?
+CanCallAMethodWithGivenArguments = Can the function [%s] be called with the arguments ([%s])?
+WhichReturnType = What is the return type of the function [%s]?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = How many array position reads are performed when calling [%s]?
