--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -13,18 +13,18 @@ MostWantedHolder = Guardadora
 OneWayFlag = Sinalizadora
 
 # JASK Static Question Types
-CallsOtherFunctions = O método [%s] depende de outros métodos?
-HowManyFunctions = De quantos métodos depende o método [%s]?
-WhichFunctions = Quais são os métodos (além de si próprio) de que depende o método [%s]?
-IsRecursive = O método [%s] é recursivo?
-HowManyParams = Quantos parâmetros tem o método [%s]?
-WhichParameters = Quais são os nomes dos parâmetros do método [%s]?
-HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem o método [%s]?
-WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) do método [%s]?
+CallsOtherFunctions = A função [%s] depende de outros funções?
+HowManyFunctions = De quantas funções depende a função [%s]?
+WhichFunctions = Quais são os funções de que depende a função [%s]?
+IsRecursive = A função [%s] é recursiva?
+HowManyParams = Quantos parâmetros tem a função [%s]?
+WhichParameters = Quais são os nomes dos parâmetros da função [%s]?
+HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem a função [%s]?
+WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) da função [%s]?
 WhichVariableHoldsReturn = Que variável vai armazenar o valor de retorno da função [%s]?
-WhichFixedVariables = Quais são as variáveis de valor fixo do método [%s]?
-WhichVariableRole = Qual o papel da variável [%s] no método [%s]?
-HowManyLoops = Quantos ciclos tem o método [%s]?
+WhichFixedVariables = Quais são as variáveis de valor fixo da função [%s]?
+WhichVariableRole = Qual o papel da variável [%s] na função [%s]?
+HowManyLoops = Quantos ciclos tem a função [%s]?
 
 # JASK Dynamic Question Types
 HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação [%s]?
@@ -34,8 +34,8 @@ WhichVariableValues = Qual a sequência de valores tomadas pela variável [%s] na 
 WhatIsResult = Qual o valor devolvido pela invocação da função [%s]?
 
 # Custom Static Question Types
-CanCallAMethodWithGivenArguments = O método [%s] pode ser chamado com os argumentos ([%s])?
-WhichReturnType = Qual o tipo de retorno do método [%s]?
+CanCallAMethodWithGivenArguments = A função [%s] pode ser chamada com os argumentos ([%s])?
+WhichReturnType = Qual o tipo de retorno da função [%s]?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas posições de vetor são lidas ao invocar [%s]?
