change HowManyFunctionCalls + add HowManyLoopIterations

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -28,7 +28,7 @@ HowManyLoops = How many loops does function [%s] have?
 
 # JASK Dynamic Question Types
 HowDeepCallStack = What is the maximum call stack depth when calling [%s]?
-HowManyFunctionCalls = How many function calls are executed when calling [%s]?
+HowManyFunctionCalls = How many calls to [%s] are performed when calling [%s]?
 HowManyVariableAssignments = How many times is the variable [%s] assigned when calling [%s]?
 WhichVariableValues = Which is the sequence of values taken by the variable [%s] when calling [%s]?
 WhatIsResult = What is the value returned by the function call [%s]?
@@ -41,3 +41,6 @@ WhichReturnType = What is the return type of the function [%s]?
 HowManyArrayReads = How many array position reads are performed when calling [%s]?
 HowManyArrayWrites = How many array position writes are performed when calling [%s]?
 
+HowManyArrayAllocations = How many arrays are allocated when calling [%s]?
+
+HowManyLoopIterations = When calling [%s], how many iterations does the loop perform?
