--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -28,10 +28,10 @@ HowManyLoops = Quantos ciclos tem a função [%s]?
 
 # JASK Dynamic Question Types
 HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação [%s]?
-HowManyFunctionCalls = Quantas invocações de funções são executadas na invocação [%s]?
-HowManyVariableAssignments = Quantas vezes é a variável [%s] atribuída na invocação [%s]?
-WhichVariableValues = Qual a sequência de valores tomadas pela variável [%s] na invocação [%s]?
-WhatIsResult = Qual o valor devolvido pela invocação da função [%s]?
+HowManyFunctionCalls = Quantas invocações a [%s] são feitas ao invocar [%s]?
+HowManyVariableAssignments = Quantas atribuíções de valor à variável [%s] são feitas na invocação [%s]?
+WhichVariableValues = Qual a sequência de valores atribuidos à variável [%s] na invocação [%s]?
+WhatIsResult = Qual o valor devolvido ao invocar [%s]?
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = A função [%s] pode ser chamada com os argumentos ([%s])?
@@ -40,3 +40,7 @@ WhichReturnType = Qual o tipo de retorno da função [%s]?
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas posições de vetor são lidas ao invocar [%s]?
 HowManyArrayWrites = Quantas posições de vetor são escritas ao invocar [%s]?
+
+HowManyArrayAllocations = Quantos vetores são alocados ao invocar [%s]?
+
+HowManyLoopIterations = Ao invocar [%s], quantas iterações são executadas no ciclo?
