Small tweaks to distractors

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -12,6 +12,9 @@ Stepper = Stepper
 MostWantedHolder = Most-Wanted Holder
 OneWayFlag = One-Way Flag
 
+# Answers
+FunctionTakesNoParameters = The function does not take any parameters.
+
 # JASK Static Question Types
 CallsOtherFunctions = Does the function [%s] depend on other functions?
 HowManyFunctions = How many functions does the function [%s] depend on?
