--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -12,6 +12,9 @@ Stepper = Iteradora
 MostWantedHolder = Guardadora
 OneWayFlag = Sinalizadora
 
+# Answers
+FunctionTakesNoParameters = A função não recebe quaisquer parâmetros.
+
 # JASK Static Question Types
 CallsOtherFunctions = A função [%s] depende de outros funções?
 HowManyFunctions = De quantas funções depende a função [%s]?
