- minors in layout and question text

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -24,7 +24,7 @@ HowManyParams = How many parameters does the [%s] function take?
 WhichParameters = Which are the parameter names of the function [%s]?
 HowManyVariables = How many variables (not including parameters) does the function [%s] have?
 WhatVariables = Which are the variable names (not including parameters) of the function [%s]?
-WhichVariableHoldsReturn = Which variable will hold the return value of the function [%s]?
+WhichVariableHoldsReturn = Which variable holds the result of the function [%s]?
 WhichFixedVariables = Which are the fixed value variables of function [%s]?
 WhichVariableRole = What is the role of the variable [%s] in the function [%s]?
 HowManyLoops = How many loops does function [%s] have?
