--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -24,7 +24,7 @@ HowManyParams = Quantos parâmetros tem a função [%s]?
 WhichParameters = Quais são os nomes dos parâmetros da função [%s]?
 HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem a função [%s]?
 WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) da função [%s]?
-WhichVariableHoldsReturn = Que variável vai armazenar o valor de retorno da função [%s]?
+WhichVariableHoldsReturn = Qual a variável que guarda o resultado da função [%s]?
 WhichFixedVariables = Quais são as variáveis de valor fixo da função [%s]?
 WhichVariableRole = Qual o papel da variável [%s] na função [%s]?
 HowManyLoops = Quantos ciclos tem a função [%s]?
@@ -41,8 +41,8 @@ CanCallAMethodWithGivenArguments = A função [%s] pode ser chamada com os argumen
 WhichReturnType = Qual o tipo de retorno da função [%s]?
 
 # Custom Dynamic Question Types
-HowManyArrayReads = Quantas posições de vetor são lidas ao invocar [%s]?
-HowManyArrayWrites = Quantas posições de vetor são escritas ao invocar [%s]?
+HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar [%s]?
+HowManyArrayWrites = Quantas escritas em posições de vetor são feitas ao invocar [%s]?
 
 HowManyArrayAllocations = Quantos vetores são alocados ao invocar [%s]?
 
