- great FP - Féio Programming

--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -32,7 +32,7 @@ HowManyLoops = Quantos ciclos tem a função [%s]?
 # JASK Dynamic Question Types
 HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação [%s]?
 HowManyFunctionCalls = Quantas invocações a [%s] são feitas ao invocar [%s]?
-HowManyVariableAssignments = Quantas atribuíções de valor à variável [%s] são feitas na invocação [%s]?
+HowManyVariableAssignments = Quantas atribuições de valor à variável [%s] são feitas na invocação [%s]?
 WhichVariableValues = Qual a sequência de valores atribuidos à variável [%s] na invocação [%s]?
 WhatIsResult = Qual o valor devolvido ao invocar [%s]?
 
@@ -42,7 +42,7 @@ WhichReturnType = Qual o tipo de retorno da função [%s]?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar [%s]?
-HowManyArrayWrites = Quantas escritas em posições de vetor são feitas ao invocar [%s]?
+HowManyArrayWrites = Quantas escritas em posições de vetor são realizadas ao invocar [%s]?
 
 HowManyArrayAllocations = Quantos vetores são alocados ao invocar [%s]?
 
