um pouco ajavardado, mas é o possível
nova QLC: WhichParameterTypes

--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -13,7 +13,7 @@ MostWantedHolder = Guardadora
 OneWayFlag = Sinalizadora
 
 # Answers
-FunctionTakesNoParameters = A função não recebe quaisquer parâmetros.
+FunctionTakesNoParameters = A função não tem parâmetros.
 
 # JASK Static Question Types
 CallsOtherFunctions = A função [%s] depende de outros funções?
@@ -22,6 +22,7 @@ WhichFunctions = Quais são os funções de que depende a função [%s]?
 IsRecursive = A função [%s] é recursiva?
 HowManyParams = Quantos parâmetros tem a função [%s]?
 WhichParameters = Quais são os nomes dos parâmetros da função [%s]?
+WhichParameterTypes = Quais são os tipos dos parâmetros da função [%s]?
 HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem a função [%s]?
 WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) da função [%s]?
 WhichVariableHoldsReturn = Qual a variável que guarda o resultado da função [%s]?
