--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -13,15 +13,16 @@ MostWantedHolder = Most-Wanted Holder
 OneWayFlag = One-Way Flag
 
 # Answers
-FunctionTakesNoParameters = The function does not take any parameters.
+FunctionTakesNoParameters = The function has no parameters.
 
 # JASK Static Question Types
 CallsOtherFunctions = Does the function [%s] depend on other functions?
 HowManyFunctions = How many functions does the function [%s] depend on?
 WhichFunctions = Which other functions does function [%s] depend on?
 IsRecursive = Is the function [%s] recursive?
-HowManyParams = How many parameters does the [%s] function take?
-WhichParameters = Which are the parameter names of the function [%s]?
+HowManyParams = How many parameters does the function [%s] have?
+WhichParameters = Which are the parameter names of function [%s]?
+WhichParameterTypes = Which are the parameter types of function [%s]?
 HowManyVariables = How many variables (not including parameters) does the function [%s] have?
 WhatVariables = Which are the variable names (not including parameters) of the function [%s]?
 WhichVariableHoldsReturn = Which variable holds the result of the function [%s]?
