--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -40,11 +40,11 @@ WhatIsResult = What is the value returned by the function call [%s]?
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = Can the function [%s] be called with the arguments ([%s])?
 WhichReturnType = What is the return type of the function [%s]?
+HowManyLoopsMakeSense = How many loops might you need to implement the function [%s] with the following signature?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = How many array position reads are performed when calling [%s]?
 HowManyArrayWrites = How many array position writes are performed when calling [%s]?
-
+WhichResultMakesSense = Given the following function signature, which result would make the most sense for the function call [%s]?
 HowManyArrayAllocations = How many arrays are allocated when calling [%s]?
-
 HowManyLoopIterations = When calling [%s], how many iterations does the loop perform?
