nova QLC: WhichReturnExecuted

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -14,6 +14,7 @@ OneWayFlag = One-Way Flag
 
 # Answers
 FunctionTakesNoParameters = The function has no parameters.
+Line = Line
 
 # JASK Static Question Types
 CallsOtherFunctions = Does the function [%s] depend on other functions?
@@ -30,12 +31,14 @@ WhichFixedVariables = Which are the fixed value variables of function [%s]?
 WhichVariableRole = What is the role of the variable [%s] in the function [%s]?
 HowManyLoops = How many loops does function [%s] have?
 
+
 # JASK Dynamic Question Types
 HowDeepCallStack = What is the maximum call stack depth when calling [%s]?
 HowManyFunctionCalls = How many calls to [%s] are performed when calling [%s]?
 HowManyVariableAssignments = How many times is the variable [%s] assigned when calling [%s]?
 WhichVariableValues = Which is the sequence of values taken by the variable [%s] when calling [%s]?
 WhatIsResult = What is the value returned by the function call [%s]?
+WhichReturnExecuted = Which return statement (line) executed when calling [%s]?
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = Can the function [%s] be called with the arguments ([%s])?
