--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -14,6 +14,7 @@ OneWayFlag = Sinalizadora
 
 # Answers
 FunctionTakesNoParameters = A função não tem parâmetros.
+Line = Linha
 
 # JASK Static Question Types
 CallsOtherFunctions = A função [%s] depende de outros funções?
@@ -36,6 +37,7 @@ HowManyFunctionCalls = Quantas invocações a [%s] são feitas ao invocar [%s]?
 HowManyVariableAssignments = Quantas atribuições de valor à variável [%s] são feitas na invocação [%s]?
 WhichVariableValues = Qual a sequência de valores atribuidos à variável [%s] na invocação [%s]?
 WhatIsResult = Qual o valor devolvido ao invocar [%s]?
+WhichReturnExecuted = Qual a instrução de retorno (linha) que executou ao invocar [%s]?
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = A função [%s] pode ser chamada com os argumentos ([%s])?
