nova QLC: ArraySize

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -39,6 +39,7 @@ HowManyVariableAssignments = How many times is the variable [%s] assigned when c
 WhichVariableValues = Which is the sequence of values taken by the variable [%s] when calling [%s]?
 WhatIsResult = What is the value returned by the function call [%s]?
 WhichReturnExecuted = Which return statement (line) executed when calling [%s]?
+WhatArraySize = Which is the length of the first array allocated when calling [%s]?
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = Can the function [%s] be called with the arguments ([%s])?
