--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -38,6 +38,7 @@ HowManyVariableAssignments = Quantas atribuições de valor à variável [%s] são fe
 WhichVariableValues = Qual a sequência de valores atribuidos à variável [%s] na invocação [%s]?
 WhatIsResult = Qual o valor devolvido ao invocar [%s]?
 WhichReturnExecuted = Qual a instrução de retorno (linha) que executou ao invocar [%s]?
+WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar [%s]?
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = A função [%s] pode ser chamada com os argumentos ([%s])?
