--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -18,8 +18,8 @@ Line = Line
 
 # JASK Static Question Types
 CallsOtherFunctions = Does the function [%s] depend on other functions?
-HowManyFunctions = How many functions does the function [%s] depend on?
-WhichFunctions = Which other functions does function [%s] depend on?
+HowManyFunctionDependencies = How many functions does the function [%s] depend on?
+WhichFunctionDependencies = Which other functions does function [%s] depend on?
 IsRecursive = Is the function [%s] recursive?
 HowManyParams = How many parameters does the function [%s] have?
 WhichParameters = Which are the parameter names of function [%s]?
