--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -18,8 +18,8 @@ Line = Linha
 
 # JASK Static Question Types
 CallsOtherFunctions = A função [%s] depende de outros funções?
-HowManyFunctions = De quantas funções depende a função [%s]?
-WhichFunctions = Quais são os funções de que depende a função [%s]?
+HowManyFunctionDependencies = De quantas funções depende a função [%s]?
+WhichFunctionDependencies = Quais são os funções de que depende a função [%s]?
 IsRecursive = A função [%s] é recursiva?
 HowManyParams = Quantos parâmetros tem a função [%s]?
 WhichParameters = Quais são os nomes dos parâmetros da função [%s]?
