--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -17,38 +17,38 @@ FunctionTakesNoParameters = The function has no parameters.
 Line = Line
 
 # JASK Static Question Types
-CallsOtherFunctions = Does the function [%s] depend on other functions?
-HowManyFunctionDependencies = How many functions does the function [%s] depend on?
-WhichFunctionDependencies = Which other functions does function [%s] depend on?
-IsRecursive = Is the function [%s] recursive?
-HowManyParams = How many parameters does the function [%s] have?
-WhichParameters = Which are the parameter names of function [%s]?
-WhichParameterTypes = Which are the parameter types of function [%s]?
-HowManyVariables = How many variables (not including parameters) does the function [%s] have?
-WhatVariables = Which are the variable names (not including parameters) of the function [%s]?
-WhichVariableHoldsReturn = Which variable holds the result of the function [%s]?
-WhichFixedVariables = Which are the fixed value variables of function [%s]?
-WhichVariableRole = What is the role of the variable [%s] in the function [%s]?
-HowManyLoops = How many loops does function [%s] have?
+CallsOtherFunctions = Does the function %s depend on other functions?
+HowManyFunctionDependencies = How many functions does the function %s depend on?
+WhichFunctionDependencies = Which other functions does function %s depend on?
+IsRecursive = Is the function %s recursive?
+HowManyParams = How many parameters does the function %s have?
+WhichParameters = Which are the parameter names of function %s?
+WhichParameterTypes = Which are the parameter types of function %s?
+HowManyVariables = How many variables (not including parameters) does the function %s have?
+WhatVariables = Which are the variable names (not including parameters) of the function %s?
+WhichVariableHoldsReturn = Which variable holds the result of the function %s?
+WhichFixedVariables = Which are the fixed value variables of function %s?
+WhichVariableRole = What is the role of the variable %s in the function %s?
+HowManyLoops = How many loops does function %s have?
 
 
 # JASK Dynamic Question Types
-HowDeepCallStack = What is the maximum call stack depth when calling [%s]?
-HowManyFunctionCalls = How many calls to [%s] are performed when calling [%s]?
-HowManyVariableAssignments = How many times is the variable [%s] assigned when calling [%s]?
-WhichVariableValues = Which is the sequence of values taken by the variable [%s] when calling [%s]?
-WhatIsResult = What is the value returned by the function call [%s]?
-WhichReturnExecuted = Which return statement (line) executed when calling [%s]?
-WhatArraySize = Which is the length of the first array allocated when calling [%s]?
+HowDeepCallStack = What is the maximum call stack depth when calling %s?
+HowManyFunctionCalls = How many calls to %s are performed when calling %s?
+HowManyVariableAssignments = How many times is the variable %s assigned when calling %s?
+WhichVariableValues = Which is the sequence of values taken by the variable %s when calling %s?
+WhatIsResult = What is the value returned by the function call %s?
+WhichReturnExecuted = Which return statement (line) executed when calling %s?
+WhatArraySize = Which is the length of the first array allocated when calling %s?
 
 # Custom Static Question Types
-CanCallAMethodWithGivenArguments = Can the function [%s] be called with the arguments ([%s])?
-WhichReturnType = What is the return type of the function [%s]?
-HowManyLoopsMakeSense = How many loops might you need to implement the function [%s] with the following signature?
+CanCallAMethodWithGivenArguments = Can the function %s be called with the arguments (%s)?
+WhichReturnType = What is the return type of the function %s?
+HowManyLoopsMakeSense = How many loops might you need to implement the function %s with the following signature?
 
 # Custom Dynamic Question Types
-HowManyArrayReads = How many array position reads are performed when calling [%s]?
-HowManyArrayWrites = How many array position writes are performed when calling [%s]?
-WhichResultMakesSense = Given the following function signature, which result would make the most sense for the function call [%s]?
-HowManyArrayAllocations = How many arrays are allocated when calling [%s]?
-HowManyLoopIterations = When calling [%s], how many iterations does the loop perform?
+HowManyArrayReads = How many array position reads are performed when calling %s?
+HowManyArrayWrites = How many array position writes are performed when calling %s?
+WhichResultMakesSense = Given the following function signature, which result would make the most sense for the function call %s?
+HowManyArrayAllocations = How many arrays are allocated when calling %s?
+HowManyLoopIterations = When calling %s, how many iterations does the loop perform?
