--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -17,37 +17,37 @@ FunctionTakesNoParameters = A função não tem parâmetros.
 Line = Linha
 
 # JASK Static Question Types
-CallsOtherFunctions = A função [%s] depende de outros funções?
-HowManyFunctionDependencies = De quantas funções depende a função [%s]?
-WhichFunctionDependencies = Quais são os funções de que depende a função [%s]?
-IsRecursive = A função [%s] é recursiva?
-HowManyParams = Quantos parâmetros tem a função [%s]?
-WhichParameters = Quais são os nomes dos parâmetros da função [%s]?
-WhichParameterTypes = Quais são os tipos dos parâmetros da função [%s]?
-HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem a função [%s]?
-WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) da função [%s]?
-WhichVariableHoldsReturn = Qual a variável que guarda o resultado da função [%s]?
-WhichFixedVariables = Quais são as variáveis de valor fixo da função [%s]?
-WhichVariableRole = Qual o papel da variável [%s] na função [%s]?
-HowManyLoops = Quantos ciclos tem a função [%s]?
+CallsOtherFunctions = A função %s depende de outros funções?
+HowManyFunctionDependencies = De quantas funções depende a função %s?
+WhichFunctionDependencies = Quais são os funções de que depende a função %s?
+IsRecursive = A função %s é recursiva?
+HowManyParams = Quantos parâmetros tem a função %s?
+WhichParameters = Quais são os nomes dos parâmetros da função %s?
+WhichParameterTypes = Quais são os tipos dos parâmetros da função %s?
+HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem a função %s?
+WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) da função %s?
+WhichVariableHoldsReturn = Qual a variável que guarda o resultado da função %s?
+WhichFixedVariables = Quais são as variáveis de valor fixo da função %s?
+WhichVariableRole = Qual o papel da variável %s na função %s?
+HowManyLoops = Quantos ciclos tem a função %s?
 
 # JASK Dynamic Question Types
-HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação [%s]?
-HowManyFunctionCalls = Quantas invocações a [%s] são feitas ao invocar [%s]?
-HowManyVariableAssignments = Quantas atribuições de valor à variável [%s] são feitas na invocação [%s]?
-WhichVariableValues = Qual a sequência de valores atribuidos à variável [%s] na invocação [%s]?
-WhatIsResult = Qual o valor devolvido ao invocar [%s]?
-WhichReturnExecuted = Qual a instrução de retorno (linha) que executou ao invocar [%s]?
-WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar [%s]?
+HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação %s?
+HowManyFunctionCalls = Quantas invocações a %s são feitas ao invocar %s?
+HowManyVariableAssignments = Quantas atribuições de valor à variável %s são feitas na invocação %s?
+WhichVariableValues = Qual a sequência de valores atribuidos à variável %s na invocação %s?
+WhatIsResult = Qual o valor devolvido ao invocar %s?
+WhichReturnExecuted = Qual a instrução de retorno (linha) que executou ao invocar %s?
+WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar %s?
 
 # Custom Static Question Types
-CanCallAMethodWithGivenArguments = A função [%s] pode ser chamada com os argumentos ([%s])?
-WhichReturnType = Qual o tipo de retorno da função [%s]?
-HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a função [%s] com a seguinte assinatura?
+CanCallAMethodWithGivenArguments = A função %s pode ser chamada com os argumentos (%s)?
+WhichReturnType = Qual o tipo de retorno da função %s?
+HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a função %s com a seguinte assinatura?
 
 # Custom Dynamic Question Types
-HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar [%s]?
-HowManyArrayWrites = Quantas escritas em posições de vetor são realizadas ao invocar [%s]?
-WhichResultMakesSense = Dada a seguinte assinatura de uma função, que resultado faria mais sentido para a invocação [%s]?
-HowManyArrayAllocations = Quantos vetores são alocados ao invocar [%s]?
-HowManyLoopIterations = Ao invocar [%s], quantas iterações são executadas no ciclo?
+HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
+HowManyArrayWrites = Quantas escritas em posições de vetor são realizadas ao invocar %s?
+WhichResultMakesSense = Dada a seguinte assinatura de uma função, que resultado faria mais sentido para a invocação %s?
+HowManyArrayAllocations = Quantos vetores são alocados ao invocar %s?
+HowManyLoopIterations = Ao invocar %s, quantas iterações são executadas no ciclo?
