--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -31,7 +31,6 @@ WhichFixedVariables = Which are the fixed value variables of function %s?
 WhichVariableRole = What is the role of the variable %s in the function %s?
 HowManyLoops = How many loops does function %s have?
 
-
 # JASK Dynamic Question Types
 HowDeepCallStack = What is the maximum call stack depth when calling %s?
 HowManyFunctionCalls = How many calls to %s are performed when calling %s?
@@ -45,6 +44,7 @@ WhatArraySize = Which is the length of the first array allocated when calling %s
 CanCallAMethodWithGivenArguments = Can the function %s be called with the arguments (%s)?
 WhichReturnType = What is the return type of the function %s?
 HowManyLoopsMakeSense = How many loops might you need to implement the function %s with the following signature?
+WhichVariablesInScope = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = How many array position reads are performed when calling %s?
