--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -44,6 +44,7 @@ WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar %s?
 CanCallAMethodWithGivenArguments = A função %s pode ser chamada com os argumentos (%s)?
 WhichReturnType = Qual o tipo de retorno da função %s?
 HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a função %s com a seguinte assinatura?
+WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
