Compiler error fixes + QLCs

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -44,7 +44,11 @@ WhatArraySize = Which is the length of the first array allocated when calling %s
 CanCallAMethodWithGivenArguments = Can the function %s be called with the arguments (%s)?
 WhichReturnType = What is the return type of the function %s?
 HowManyLoopsMakeSense = How many loops might you need to implement the function %s with the following signature?
-WhichVariablesInScope = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
+
+# Compiler Error Questions
+ReferencesUndefinedVariable = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
+MethodWithWrongReturnStmt = The return statement %s is invalid for the function %s. What is the return type of the function?
+CallMethodWithWrongParameterNumber = The function call %s (line %s) does not use the correct number of arguments. How many parameters does the function %s have?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = How many array position reads are performed when calling %s?
