--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -51,6 +51,7 @@ UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
 MethodWithWrongReturnStmt = A instrução de retorno %s é inválida para a função %s. Qual o tipo de retorno da função?
 CallMethodWithWrongParameterNumber = A invocação %s (linha %s) não usa o número correto de argumentos. Quantos parâmetros tem a função %s?
+CallMethodWithWrongParameterTypes = A invocação %s (linha %s) não usa o(s) tipo(s) correto(s) de argumentos. Quais são os tipos dos parâmetros da função %s?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
