fix previous commit, add question text, and implement UnnecessaryEqualsTrueOrFalse

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -46,6 +46,9 @@ WhichReturnType = What is the return type of the function %s?
 HowManyLoopsMakeSense = How many loops might you need to implement the function %s with the following signature?
 WhichVariablesInScope = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
 UselessDuplicationIfElse = "Do the following methods have the same behavior?"
+RemoveEmptyIfandElse = "Do the following methods have the same behavior?"
+UnnecessaryEqualsTrueOrFalse = "Do the following methods have the same behavior?"
+
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
