--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -31,6 +31,7 @@ WhichFixedVariables = Quais são as variáveis de valor fixo da função %s?
 WhichVariableRole = Qual o papel da variável %s na função %s?
 HowManyLoops = Quantos ciclos tem a função %s?
 
+
 # JASK Dynamic Question Types
 HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação %s?
 HowManyFunctionCalls = Quantas invocações a %s são feitas ao invocar %s?
@@ -46,6 +47,8 @@ WhichReturnType = Qual o tipo de retorno da função %s?
 HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a função %s com a seguinte assinatura?
 WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
 UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
+RemoveEmptyIfandElse = "Os seguintes métodos têm o mesmo comportamento?"
+UnnecessaryEqualsTrueOrFalse = "Os seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
