start working on UselessVariableDeclaration

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -48,6 +48,7 @@ WhichVariablesInScope = The variable %s is undefined on line %s. Which variables
 UselessDuplicationIfElse = "Do the following methods have the same behavior?"
 RemoveEmptyIfandElse = "Do the following methods have the same behavior?"
 UnnecessaryEqualsTrueOrFalse = "Do the following methods have the same behavior?"
+UselessVariableDeclaration = "Do the following methods have the same behavior?"
 
 
 # Compiler Error Questions
