--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -49,6 +49,7 @@ WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáve
 UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
 RemoveEmptyIfandElse = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Os seguintes métodos têm o mesmo comportamento?"
+UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
