Compiler QLCs: bug fixes + unit tests

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -52,7 +52,7 @@ UselessVariableDeclaration = "Do the following methods have the same behavior?"
 
 
 # Compiler Error Questions
-ReferencesUndefinedVariable = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
+ReferencesUndefinedVariable = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
 MethodWithWrongReturnStmt = The return statement %s is invalid for the function %s. What is the return type of the function?
 CallMethodWithWrongParameterNumber = The function call %s (line %s) does not use the correct number of arguments. How many parameters does the function %s have?
 CallMethodWithWrongParameterTypes = The function call %s (line %s) does not use the correct types of arguments. Which are the parameter types of function %s?
