Fixes + QLCVirtualMachineWrapper skeleton

--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -47,7 +47,7 @@ WhichReturnType = Qual o tipo de retorno da função %s?
 HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a função %s com a seguinte assinatura?
 WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
 UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
-RemoveEmptyIfandElse = "Os seguintes métodos têm o mesmo comportamento?"
+RemoveEmptyIfAndElse = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Os seguintes métodos têm o mesmo comportamento?"
 UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
 
